fix for heading on small screen

--- a/css/acan.css
+++ b/css/acan.css
@@ -86,4 +86,9 @@ footer p{
 .programpanel{
 	height:580px;
 }
+@media screen and (max-width: 480px){
+	#homeHeading{
+		margin-top:10px;
+	}
+}
 /*margin: 0px; padding: 0px 0px 15px; color: rgb(102, 102, 102); font-family: 'Open Sans', Arial, Helvetica, sans-serif; line-height: 20px;*/
